css/main.css
/* ... */
.tip::before {
    background-color: #398712;
    /* this has to be inline to be styled/colored */
    mask: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><title>lightbulb-on-20</title><path d='M1 11H4V13H1V11M4.9 3.5L3.5 4.9L5.6 7L7 5.6L4.9 3.5M13 1H11V4H13V1M20 11V13H23V11H20M10 22C10 22.6 10.4 23 11 23H13C13.6 23 14 22.6 14 22V21H10V22M19.1 3.5L17 5.6L18.4 7L20.5 4.9L19.1 3.5M18 12C18 14.2 16.8 16.2 15 17.2V19C15 19.6 14.6 20 14 20H10C9.4 20 9 19.6 9 19V17.2C7.2 16.2 6 14.2 6 12C6 8.7 8.7 6 12 6S18 8.7 18 12M16 12C16 9.79 14.21 8 12 8S8 9.79 8 12 9.79 16 12 16 16 14.21 16 12Z'/></svg>");
    mask-repeat: no-repeat;
    mask-size: contain;
}

.waarschuwing p, .tip p {
    opacity: 0.88;
}

.waarschuwing :last-child,
.tip :last-child {
    margin-bottom: 0;
}

/*
Tables
*/

/* make all tables striped */
tbody tr:nth-child(odd) th,
tbody tr:nth-child(odd) td {
    background-color: var(--pico-table-row-stripped-background-color);
}

table.stickytable thead {
    top: 0;
    position: sticky;
    z-index: 1;
}


table.stickytable code[data-tooltip] {
    border-bottom: none;
}

.toelichting {
    padding-top: 0.25em;
    color: var(--pico-muted-color);
    /* --tiny-font-size is too small */
    font-size: 0.85em;
    /* line-height: 1.35; */
    /* was var(--pico-typography-spacing-vertical); */
    margin-bottom: 0.5rem;
    /* hyphens: auto; */
}

/* draw "fake" border, because the normal one doesn't work with position: sticky  */
table.stickytable thead::after {
  content: "";
  position: absolute;
  z-index: 2;
  left: 0;
  right: 0;
  bottom: 0;
  height: 3px;
  background: var(--pico-muted-border-color); /* or whatever border color */
}

/* chromium needs this in order for the above to look nice */
table.stickytable th {
    border-bottom: 1px;
    border-color: var(--pico-background-color);
}

.icon-cell {
    text-align: center !important;
    font-size: 1.375em;
    opacity: 0.82;
    font-weight: 800;
}

.icon-cell.muted {
    color: var(--pico-muted-color);
    opacity: 0.65;
    font-weight: normal;
}


/* more responsive table */

.stickytable code {
    /* disable wrapping */
    white-space: nowrap;
    font-size: 0.81em;
}

@media (max-width: 1500px) {
    .stickytable th:nth-child(2) {
        padding-left: 0px;
        padding-right: 10px;
    }
    .stickytable th:nth-child(3)  {
        padding-left: 8px;
        padding-right: 2px;
    }
}

@media (max-width: 1440px) {
    /* 10 == length of 'gegevens' + 2 */
    .code-ch-11 { max-width: 11ch; line-height: 1.3; white-space: wrap !important; }
    .code-ch-12 { max-width: 12ch; line-height: 1.3; white-space: wrap !important; }
    .code-ch-13 { max-width: 13ch; line-height: 1.3; white-space: wrap !important; }
    .code-ch-14 { max-width: 14ch; line-height: 1.3; white-space: wrap !important; }
    .code-ch-15 { max-width: 15ch; line-height: 1.3; white-space: wrap !important; }
    .code-ch-16 { max-width: 16ch; line-height: 1.3; white-space: wrap !important; }
    .code-ch-17 { max-width: 17ch; line-height: 1.3; white-space: wrap !important; }
    .code-ch-18 { max-width: 18ch; line-height: 1.3; white-space: wrap !important; }
    .code-ch-19 { max-width: 19ch; line-height: 1.3; white-space: wrap !important; }
    .code-ch-20 { max-width: 20ch; line-height: 1.3; white-space: wrap !important; }
    /* 21 == length of 'fractielidmaatschap' + 2 */
    .code-ch-21 { max-width: 21ch; line-height: 1.3; white-space: wrap !important; }
    .code-ch-22 { max-width: 22ch; line-height: 1.3; white-space: wrap !important; }
}

/* Blink needs this, because it doesn't treat word breaks (<wbr>) as
   _recommended_ breaks, but as forced breaks */
@media (min-width: 1440px) {
    code wbr {
        display: none;
    }
}


.maingrid {
  display: grid;
  grid-template-areas:
    "header header"
    "sidebar content"
    "footer footer";
  grid-template-columns: 192px minmax(0, 1fr);
  grid-gap: 2.2rem;
}


/* Horizontal nav */
aside {
    font-size: var(--tiny-font-size);
    position: sticky;
    top: 0; /* Stay at the top */
    grid-area: sidebar;
    /* for some reason, setting this to an absolute value is the only way to make sticky work,
       _and_ push the footer at the same time */
    height: 860px;
    overflow-y: auto;
    height: 100vh;
    align-items: start;
    position: sticky;
    top: 0;
}

/* hack to have margin protruding highlighting of active navbar item  */
#documentation-menu {
    margin-left: calc(var(--pico-nav-link-spacing-horizontal) * -1);
    margin-right: calc(var(--pico-nav-link-spacing-horizontal) * -1);
}

#documentation-menu nav {
    margin-left: var(--pico-nav-link-spacing-horizontal);
    margin-right: var(--pico-nav-link-spacing-horizontal);
}

/* Style currently selected item in navbar */
.listnav a.active {
    background-color: var(--pico-code-background-color);
}

/* reduce bottom paddig on active list item (if not, we pad doubly) */
.listnav li.active {
    padding-bottom: 0;
}

[data-theme="dark"] .listnav a.active {
    background-color: var(--pico-muted-border-color);
}

.listnav ul ul {
    padding-top: 0.2rem; /* increase vertical space between list elem and first subelemnt */
    padding-left: 0.75rem;  /* indent nested list */
}

a.mainpage {
    font-weight: bold;
}

/* agendapunt example */
.card > header > * {
    margin-bottom: 0;
}

.card > header p {
    font-size: 1.125rem;
}

.card {
    border-style: solid;
    border-radius: var(--pico-border-radius);
    border-width: 3px;
    border-color: var(--pico-card-border-color);
    box-shadow: var(--pico-box-shadow);
    background: var(--pico-card-background-color) !important;
    width: 90%;
    margin: var(--pico-block-spacing-vertical) auto;
}

.hoofdagendapunt details {
    margin-left: 30px;
}
/* ... */

